--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.12.0",
+    "@stripe/stripe-js": "^1.39.0",
     "aws4": "^1.11.0",
     "bcrypt": "^5.1.0",
     "gtts": "^0.2.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
-    "next": "12.2.5",
+    "next": "^12.2.5",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^10.13.0"
   },
   "devDependencies": {
     "eslint": "8.23.0",
